--- a/index.html
+++ b/index.html
@@ -61,7 +61,23 @@ body {
     background-attachment: scroll;
     min-height: 400px;
   }
-}
+
+ @media (max-width: 768px) {
+      /* Adjust styles for smaller screens */
+
+      /* Specific styles for the w3-col with class m6 */
+      .w3-col.m6 {
+        width: 100%;
+        /* Add your styles here for smaller screens */
+      }
+
+      /* Specific styles for the image within that specific w3-col */
+      .w3-col.m6 img {
+        max-width: 100%; /* Set the maximum width of the image */
+        height: auto; /* Maintain the aspect ratio */
+      }
+    }
+}    
 </style>
 </head>
 <body>
@@ -90,7 +106,7 @@ body {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-hover-opacity-off" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">ANGELA <span class="w3-hide-small">RICA</span> VIDAL</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">WELCOME <span class="w3-hide-small">TO MY</span> WEBSITE</span>
   </div>
 </div>
 
@@ -103,8 +119,8 @@ body {
   </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="client.jpg" width="450" height="500">
+      <p><b><i class="fa fa-user w3-margin-right"></i>Angela Rica Vidal</b></p><br>
+      <img src="client.jpg" width="410" height="500">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -238,12 +254,11 @@ body {
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">MY CONTACT</h3>
-  <p class="w3-center"><em>Connect with me!</em></p>
+  <h3 class="w3-center">Connect with me!</h3>
+  <p class="w3-center"><em>Maintaining regular communication is imperative to ensure alignment and collaboration.</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="contact.png" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
